# mlops_example_1

./: .env.example  main.py  permissions.json  pyproject.toml  requirements.txt  test_devices.ipynb
services/company_api/: auth.py  cameras.py
services/public/: camera_history.py  cameras.py  stations.py  transform.py
